# ViewSynthesis

./: .gitignore
ViewSynthesis/: CMakeLists.txt  CMakeLists.txt.bad  ViewSynthesis.cpp  filter.cpp  viewsynth.h
ViewSynthesis/temp/: CMakeCache.txt  Makefile  cmake_install.cmake
another/: simple_dibr.cpp
